 * Importing maps with custom dimension types or world types now works. Note that you can't edit these settings and WorldPainter will still only Import the vanilla Surface, Nether and End dimensions
 * The performance of the 3D view has been significantly improved for very large worlds
 * Various small bug fixes and improvements
 * Bug fix: fixed a visual glitch in the 3D view

-- Version 2.9.7, released 9-5-2022

 * Allow Custom Cave/Tunnel floor layer minimum levels to go below zero

-- Version 2.9.6, released 9-5-2022

 * Bug fix: fix a regression in the Minecraft 1.17 support that was generating invalid datapacks for deviating build heights

-- Version 2.9.5, released 6-5-2022

 * The Moss Block material is now considered a solid block, rather than insubstantial vegetation
 * Bug fix: fix an error that prevented the creation of Custom Underground Pockets layers

-- Version 2.9.4, released 5-5-2022

 * Bug fix: fix a startup problem related to the UI scale setting
 * Bug fix: make Safe Mode disable UI scaling, as should already have been the case
 * Bug fix: make importing a height map into an existing dimension work again

-- Version 2.9.3, released 4-5-2022

 * World types are now properly supported for Minecraft 1.17, making endless borders work among other things
 * A "Resources everywhere" checkbox has been added to the Preferences screen, in order to be able to turn off "Resources everywhere" by default
 * The GraalVM JavaScript engine has been switched out for Nashorn, which is faster. This does mean that if you want to run scripts you need to run WorldPainter on Java 11 or higher
 * Various small bug fixes

-- Version 2.9.2, released 3-5-2022

 * The Preferences screen now allows to configure the default map format, and the default post processing settings
 * The status bar, info panel, brush settings and Global Operations tool now all show the correct biome names according to the map format