@@ -22,6 +22,7 @@
  * The performance of the 3D view has been significantly improved for very large worlds
  * Various small bug fixes and improvements
  * Bug fix: fixed a visual glitch in the 3D view
+ * Bug fix: fix lighting of blocks that give off light
 
 -- Version 2.9.7, released 9-5-2022
 
